@@ -7,6 +7,7 @@
 - Support multipart with iframe in process_action_link_action default response
 - Fix hidding and showing columns based on permissions with update_columns on subforms
 - Fix subform crud in subform subgroup, when form is on nested scaffold
+- Fix JS when rails-ujs is used instead of jquery_ujs (rails >= 5.1)
 
 = 3.5.3
 - Fix :text fields for rails >= 5.1
